--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -19,7 +19,7 @@ jobs:
       matrix:
         include:
           - platform: linux/arm64
-            runner: [self-hosted, Linux, ARM64]
+            runner: ubuntu-24.04-arm
             suffix: arm64
           - platform: linux/amd64
             runner: ubuntu-latest
