Refactor comments in .env.example

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ JWT_SECRET=
 # Signed URL secret for media access (REQUIRED)
 SIGNED_URL_SECRET=
 
-# Pepper for hashing refresh/invite/reset tokens (recommended)
+# Pepper for hashing refresh/invite/reset tokens
 TOKEN_PEPPER=
 
 # Auth settings
